# social_media_app

./: .gitignore  pyproject.toml  readme.md
_static/css/bases/: base_contents.css  base_navbar.css  base_right_sidebar.css  base_users.css
_static/css/contents/: create.css  delete.css  home.css
_static/css/users/: delete.css  forms.css  profile.css
_templates/bases/: base_contents.html  base_users.html  navbar.html  right_sidebar.html
_templates/contents/: create.html  delete.html  home.html  update.html
_templates/pages/: about.html
_templates/users/: delete.html  profile.html  signin.html  signup.html  user.html
app/abstract/: Renderer.py
app/enums/: HttpMethods.py
app/helpers/contrib/: messages.py
app_contents/: forms.py  models.py  urls.py  views.py
app_contents/migrations/: 0001_initial.py  0002_post_posted_at_alter_post_image.py
app_pages/: urls.py  views.py
app_users/: forms.py  models.py  urls.py  views.py
app_users/migrations/: 0001_initial.py  0002_alter_profile_image_alter_user_gender.py  0003_alter_profile_image.py  0004_alter_profile_user.py  0005_alter_profile_image.py
root/: settings.py  urls.py
scripts/: orm.py
