[tool.poetry]
name = "socialmediaapp-v1"
version = "1.0"
description = "A social media app"
authors = ["Pascal Le Grand <vkrivx41@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.7"
django-extensions = "^4.1"
pillow = "^12.0.0"
django-cleanup = "^9.0.0"
python-decouple = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
